# dharma

./: .gitignore  Cargo.toml  article.fr.md  backlog.md  commerce_core_specs.md  done.md  logs  ongoing.md  these.fr.md  thesis.md  todo.md
.github/: deny.toml
.github/workflows/: ci-main.yml  ci-pr.yml  fuzz.yml  release.yml  security.yml
.vgindex/: manifest.json
contracts/std/: atlas.dhl  atlas_domain.dhl  biz_inventory.dhl  biz_logistics.dhl  biz_orders.dhl  biz_suppliers.dhl  commerce_availability_item_bucket.dhl  commerce_availability_item_preorder_terms.dhl  commerce_availability_reservation_summary.dhl  commerce_catalog_item.dhl  commerce_catalog_product.dhl  commerce_catalog_product_facet.dhl  commerce_catalog_variant.dhl  commerce_catalog_variant_availability.dhl  commerce_catalog_variant_snapshot.dhl  commerce_client.dhl  commerce_client_group.dhl  commerce_credit_note.dhl  commerce_credit_note_line.dhl  commerce_inventory_batch.dhl  commerce_inventory_ledger.dhl  commerce_inventory_sellable.dhl  commerce_inventory_supplier.dhl  commerce_invoice.dhl  commerce_invoice_line.dhl  commerce_logistics_batch.dhl  commerce_logistics_batch_line.dhl  commerce_logistics_batch_route.dhl  commerce_logistics_warehouse.dhl  commerce_order_line.dhl  commerce_order_line_stats.dhl  commerce_order_po.dhl  (+20 more)
dev_docs/: README.md  analysis.md  analysis_gemini.md  compiler_prover.md  dharma-fabric.md  dharma-q.md  dharma_for_commerce.md  dharma_for_governance.md  dharma_for_healthcare.md  dharma_for_humans.md  dharma_for_logistics.md  dharma_for_national_security.md  dharma_vs_ethereum.md  dharma_vs_ipfs.md  dharma_vs_sap.md  dhl-review.md  dhl_gaps_business.md  doc_structure.md  forecast_pipeline_spec.md  jd_review.md  keyspace_embedding_spec.md  language.md  network_prd.md  network_prd_dependency_graph.md  onboarding.md  oracles.md  overview.md  protocol.md  reco_pipeline_spec.md  repl.md  scalable_chat.md  t.md  test-philosophy.md  testing.md  user_guide.md  what_dharma_cant_do.md  workspace.md
dharma-cli/: Cargo.toml
dharma-cli/src/: dharmaq.rs  dhlp.rs  dhlq.rs  lib.rs  main.rs  reactor.rs  vault.rs
dharma-cli/src/cmd/: action.rs  mod.rs  ops.rs  project.rs  project_runtime.rs  write.rs
dharma-cli/src/pdl/: ast.rs  expr.rs  merge.rs  mod.rs  parser.rs  typecheck.rs
dharma-cli/src/pdl/codegen/: mod.rs  permissions.rs  reactor.rs  schema.rs  wasm.rs
dharma-cli/src/pkg/: mod.rs
dharma-cli/src/repl/: aliases.rs  context.rs  core.rs  diff.rs  history.rs  mod.rs  render.rs  subjects.rs
dharma-core/: Cargo.toml  build.rs
dharma-core/fuzz/: .gitignore  Cargo.toml  README.md
dharma-core/fuzz/corpus/assertion_envelope_from_cbor/: seed-valid-envelope-001.cbor
dharma-core/fuzz/corpus/assertion_plaintext_from_cbor/: seed-invalid-sig-001.cbor
dharma-core/fuzz/corpus/cbor_ensure_canonical/: seed-schema-note-001.cbor
dharma-core/fuzz/corpus/contract_parse_contract_result/: seed-contract-accept.cbor  seed-contract-bad-status.cbor
dharma-core/fuzz/corpus/handshake_decode_plain_frame/: seed-handshake-plain-bad-magic.cbor  seed-handshake-plain-valid.cbor
dharma-core/fuzz/corpus/handshake_session_decrypt/: seed-session-frame-zero-ct.cbor
dharma-core/fuzz/corpus/sync_message_from_cbor/: seed-sync-err-oops.cbor
dharma-core/fuzz/fuzz_targets/: assertion_envelope_from_cbor.rs  assertion_plaintext_from_cbor.rs  cbor_decode_value.rs  cbor_ensure_canonical.rs  contract_parse_contract_result.rs  handshake_decode_plain_frame.rs  handshake_session_decrypt.rs  sync_message_from_cbor.rs
dharma-core/src/: assertion.rs  assertion_types.rs  backup.rs  builtins.rs  cbor.rs  config.rs  contacts.rs  contract.rs  crypto.rs  dhlp.rs  dhlq.rs  domain.rs  env.rs  envelope.rs  error.rs  identity.rs  identity_store.rs  keys.rs  keystore.rs  lib.rs  lock.rs  metrics.rs  ownership.rs  reactor.rs  relay.rs  schema.rs  share.rs  store.rs  sync.rs  types.rs  validation.rs  value.rs
dharma-core/src/dharmaq/: bitset.rs  mod.rs
dharma-core/src/fabric/: auth.rs  directory.rs  mod.rs  protocol.rs  router.rs  types.rs
dharma-core/src/net/: codec.rs  handshake.rs  ingest.rs  io.rs  mod.rs  noise.rs  peer.rs  policy.rs  server.rs  subscriptions.rs  sync.rs  trust.rs
dharma-core/src/pdl/: schema.rs
dharma-core/src/protocols/: atlas_domain.rs  atlas_identity.rs  contacts.rs  iam.rs  mod.rs
dharma-core/src/runtime/: cqrs.rs  mod.rs  remote.rs  vm.rs
dharma-core/src/store/: clickhouse.rs  consistency.rs  index.rs  pending.rs  postgres.rs  spi.rs  sqlite.rs  state.rs
dharma-core/src/store/postgres/migrations/: 0001_init.sql
dharma-core/src/vault/: archive.rs  mod.rs  runtime.rs
dharma-core/src/vault/drivers/: arweave.rs  local.rs  mod.rs  peer.rs  s3.rs
dharma-core/tests/: clickhouse_server_adapter.rs  cross_backend_consistency_harness.rs  mode_selection_server_uses_postgres_and_clickhouse.rs  postgres_server_adapter.rs  sqlite_embedded_adapter.rs
dharma-runtime/: Cargo.toml
dharma-runtime/src/: main.rs
dharma-sim/: Cargo.toml
dharma-test/: Cargo.toml
dharma-test/src/: lib.rs  renderer.rs
dharma-ui/: Cargo.toml
docs/: README.md  testing.md
tasks/: 00_done.md  01_repl_core.md  02_state_and_history.md  03_action_and_audit.md  04_package_management.md  05_search_indexing.md  06_storage_layout.md  07_validation_pipeline.md  08_repl_extended.md  09_sync_protocol.md  10_registry.md  11_compiler_runtime.md  12_testing_conformance.md  13_noise_handshake.md  14_incremental_indexing.md  15_persistent_indexing.md  16_sync_robustness.md  17_concurrency_control.md  18_error_granularity.md  19_5_dynamic_columns.md  19_dharma_q_spec.md  20_bloat_removal.md  21_fabric_types.md  22_capability_tokens.md  23_fabric_router.md  24_fabric_execution.md  25_directory_relay.md  26_dhl_bpm_features.md  27_workspace_refactor.md  28_dev_mode.md  29_repl_polish.md  30_semantic_ids.md  31_explicit_dag.md  32_device_keys.md  33_registry_publisher_acl.md  40_executable_docs.md  41_security_hardening.md  42_configuration_system.md  42_unified_config.md  43_dhl_aspects.md  (+84 more)
tree-sitter-dharma/: grammar.js
(+171 files in other folders)
