[package]
name = "dharma-core"
version = "0.1.0"
edition = "2021"

[features]
compiler = []
dharmaq = ["dep:byteorder", "dep:memmap2"]

[dependencies]
ciborium = { version = "0.2", default-features = false, features = ["std"] }
thiserror = "1.0"
sha2 = "0.10"
ed25519-dalek = { version = "2.2", default-features = false, features = ["rand_core"] }
rand_core = "0.6"
chacha20poly1305 = "0.10"
wasmi = { version = "0.31", default-features = false, features = ["std"] }
argon2 = { version = "0.5", default-features = false, features = ["std"] }
x25519-dalek = { version = "2.0", default-features = false, features = ["static_secrets"] }
hkdf = { version = "0.12", default-features = false }
fs2 = "0.4"
byteorder = { version = "1.5", optional = true }
crc32fast = { version = "1.4" }
memmap2 = { version = "0.9", optional = true }

[dev-dependencies]
wat = "1.0"
tempfile = "3.10"
rand = "0.8"

[build-dependencies]
wat = "1.0"
