[package]
name = "dharma-core"
version = "0.1.0"
edition = "2021"

[features]
compiler = []
dharmaq = ["dep:byteorder", "dep:memmap2"]
vault-s3 = ["dep:aws-config", "dep:aws-sdk-s3", "dep:aws-types"]
vault-arweave = ["dep:reqwest", "dep:serde_json"]
fuzzing = []

[dependencies]
ciborium = { version = "0.2", default-features = false, features = ["std"] }
thiserror = "1.0"
sha2 = "0.10"
ed25519-dalek = { version = "2.2", default-features = false, features = ["rand_core"] }
rand_core = "0.6"
chacha20poly1305 = "0.10"
wasmi = { version = "0.31", default-features = false, features = ["std"] }
argon2 = { version = "0.5", default-features = false, features = ["std"] }
x25519-dalek = { version = "2.0", default-features = false, features = ["static_secrets"] }
hkdf = { version = "0.12", default-features = false }
blake3 = "1.5"
zstd = "0.13"
hex = "0.4"
aws-config = { version = "1.1", optional = true }
aws-sdk-s3 = { version = "1.5", optional = true }
aws-types = { version = "1.3", optional = true }
tokio = { version = "1.37", features = ["rt-multi-thread", "net", "sync", "time"] }
reqwest = { version = "0.12", optional = true, default-features = false, features = ["blocking", "rustls-tls"] }
serde_json = { version = "1.0", optional = true }
fs2 = "0.4"
byteorder = { version = "1.5", optional = true }
crc32fast = { version = "1.4" }
memmap2 = { version = "0.9", optional = true }
tracing = "0.1"
rusqlite = { version = "0.31", features = ["bundled"] }
postgres = "0.19"
r2d2 = "0.8"
r2d2_postgres = "0.18"
clickhouse = "0.12"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
wat = "1.0"
tempfile = "3.10"
rand = "0.8"
clickhouse = { version = "0.12", features = ["test-util"] }

[build-dependencies]
wat = "1.0"
