[package]
name = "dharma-runtime"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "dhd"
path = "src/main.rs"

[dependencies]
dharma-core = { path = "../dharma-core" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
server = []

[dev-dependencies]
tempfile = "3"
