[package]
name = "dharma-runtime"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "dhd"
path = "src/main.rs"

[dependencies]
dharma-core = { path = "../dharma-core" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1.37", features = ["macros", "rt-multi-thread", "net", "io-util", "time", "signal"] }

[features]
server = []

[dev-dependencies]
tempfile = "3"
