[package]
name = "dharma-test"
version = "0.1.0"
edition = "2021"

[dependencies]
dharma-core = { path = "../dharma-core", features = ["dharmaq"] }
dharma-sim = { path = "../dharma-sim" }
rand_chacha = "0.3"
rand_core = "0.6"
hex = "0.4"
wat = "1.0"
ciborium = { version = "0.2", default-features = false, features = ["std"] }
ratatui = { version = "0.26", default-features = false, features = ["crossterm"] }
crossterm = "0.27"
tempfile = "3"

[features]
external = ["dharma-core/vault-s3", "dharma-core/vault-arweave"]
